--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,32 @@
-{
+/* {
     "version": "0.2.0",
     "configurations": [
         {
             "name": "gcc - Compilar y depurar archivo activo",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/philo",
-            "args": ["2", "12", "12", "12"],
+            "program": "${workspaceFolder}/cub3d",
+            "args": ["./maps/mapaPrueba.cub"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "gdb"
+            "MIMode": "lldb",
+            "miDebuggerPath": "lldb"
+        }
+    ]
+} */
+{
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "gcc - Build and debug active file",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${workspaceFolder}/cub3d",
+            "args": ["./maps/mapaPrueba.cub"],
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "C/C++"
         }
     ]
 }
